@@ -4,8 +4,8 @@ Authors@R: c(
         person("Aaron", "Lun", role = c("aut", "cre"), email="infinite.monkeys.with.keyboards@gmail.com"),
         person("Davis", "McCarthy", role="aut")
     )
-Version: 1.1.7
-Date: 2021-01-19
+Version: 1.1.8
+Date: 2021-01-26
 License: GPL-3
 Title: Single-Cell RNA-Seq Analysis Utilities
 Description: 
