@@ -13,8 +13,6 @@
 #' Only used if \code{statistics=NULL}.
 #' @param subset.row An integer, logical or character vector specifying the features to use.
 #' If \code{NULL}, defaults to all features.
-#' For the \linkS4class{SingleCellExperiment} method, this argument will not affect alternative Experiments,
-#' where aggregation is always performed for all features (or not at all, depending on \code{use.altexps}).
 #' @param suffix Logical scalar indicating whether to always suffix the assay name with the statistic type.
 #' @param ... For the generic, further arguments to be passed to specific methods.
 #'
@@ -22,8 +20,7 @@
 #'
 #' For the SingleCellExperiment method, arguments to be passed to the SummarizedExperiment method.
 #' @param use.assay.type A character or integer vector specifying the assay(s) of \code{x} containing count matrices.
-#' @param use.altexps Logical scalar indicating whether aggregation should be performed for alternative experiments. 
-#' Alternatively, a character or integer vector specifying the alternative experiments to be aggregated.
+#' @param use.altexps Deprecated, use \code{\link{applySCE}} instead. 
 #' @param use.dimred Logical scalar indicating whether aggregation should be performed for dimensionality reduction results.
 #' Alternatively, a character or integer vector specifying the dimensionality reduction results to be aggregated.
 #' @param coldata.merge A named list of functions specifying how each column metadata field should be aggregated.
@@ -39,8 +36,7 @@
 #' generated by \code{\link{summarizeAssayByGroup}} on all assays in \code{use.assay.type}.
 #' Column metadata are also aggregated according to the rules in \code{coldata.merge}, see below.
 #'
-#' For the SingleCellExperiment method, 
-#' the output also contains aggregated values for the reduced dimensions and alternative Experiments. 
+#' For the SingleCellExperiment method, any alternative Experiments are removed when \code{use.altexps=NULL}.
 #'
 #' @details
 #' This function summarizes the assay values in \code{x} for each group in \code{ids} using \code{\link{summarizeAssayByGroup}}
@@ -70,22 +66,11 @@
 #' If \code{ids} is a \linkS4class{DataFrame}, the combination of levels corresponding to each column is also reported in the column metadata.
 #' Otherwise, the level corresponding to each column is reported in the \code{ids} column metadata field as well as in the column names.
 #'
-#' @section Dealing with SingleCellExperiments:
-#' If \code{x} is a \linkS4class{SingleCellExperiment}, aggregation is repeated for each entry of \code{\link{altExps}}.
-#' This is done by calling \code{aggregateAcrossCells} on that entry with the same arguments used for the main Experiment -
-#' as such, any column metadata in those entries will also be aggregated following the rules in \code{coldata.merge}.
-#' The exception is \code{subset.row}, which is not applied to the alternative Experiments as the feature sets are different.
-#' 
-#' If \code{x} is a \linkS4class{SingleCellExperiment}, each entry of \code{\link{reducedDims}} is averaged across cells.
+#' If \code{x} is a \linkS4class{SingleCellExperiment}, entries of \code{\link{reducedDims}} specified by \code{use.dimred} are averaged across cells.
 #' This assumes that the average of low-dimensional coordinates has some meaning for a group of cells but the sum does not.
 #' We can explicitly specify computation of the \code{"mean"} or \code{"median"} (or both) with \code{dimred.stats}.
 #' If \code{dimred.stats} is of length greater than 1 or \code{suffix=TRUE},
 #' the name of each matrix in the output \code{\link{reducedDims}} is suffixed with the type of average.
-#'
-#' Users can tune the behavior of the function for these additional fields with \code{use.altexps} and \code{use.dimred}.
-#' Note that if the alternative experiments themselves are \linkS4class{SingleCellExperiment}s,
-#' any further nested alternative experiment or reduced dimensions will always be aggregated
-#' regardless of the value of \code{use.altexps} or \code{use.dimred}.
 #' 
 #' @author Aaron Lun
 #' @name aggregateAcrossCells
@@ -108,7 +93,10 @@
 #' example_sce$stuff <- runif(ncol(example_sce))
 #' out3 <- aggregateAcrossCells(example_sce, ids, 
 #'      coldata_merge=list(stuff=sum))
-#' out3
+#'
+#' # Aggregating across the alternative Experiments as well.
+#' out4 <- applySCE(example_sce, aggregateAcrossCells, ids=ids)
+#' assay(altExp(out4))[1:10,]
 NULL
 
 #' @export
@@ -244,22 +232,28 @@ setMethod("aggregateAcrossCells", "SingleCellExperiment", function(x, ids, ...,
 {
     subset.row <- .replace(subset.row, subset_row)
     subset.col <- .replace(subset.col, subset_col)
+    not.altexps <- missing(use.altexps) && missing(use_altexps)
     use.altexps <- .replace(use.altexps, use_altexps)
     use.dimred <- .replace(use.dimred, use_dimred)
 
     base.args <- list(x=x, ids=ids, subset.col=subset.col, suffix=suffix, ...)
     y <- do.call(callNextMethod, c(base.args, list(subset.row=subset.row)))
 
-    # Aggregating alternative experiments. 
-    use.altexps <- .use_names_to_integer_indices(use.altexps, x=x, nameFUN=altExpNames, msg="use.altexps")
-    for (i in use.altexps) {
-        # Do NOT pass use.altexps and use.dimred into the aggregateAcrossCells
-        # call, as this part must work with any SE object.
-        args <- base.args
-        args$x <- altExp(x, i)
-        altExp(y, i) <- do.call(aggregateAcrossCells, args)
+    # Aggregating alternative experiments (deprecated).
+    if ((not.altexps && length(altExpNames(x))) || (!not.altexps && !is.null(use.altexps) && isFALSE(use.altexps))) {
+        .Deprecated(msg="'use.altexps=' is deprecated.\nUse 'applySCE(x, aggregateAcrossCells)' instead.")
+        use.altexps <- .use_names_to_integer_indices(use.altexps, x=x, nameFUN=altExpNames, msg="use.altexps")
+        for (i in use.altexps) {
+            # Do NOT pass use.altexps and use.dimred into the aggregateAcrossCells
+            # call, as this part must work with any SE object.
+            args <- base.args
+            args$x <- altExp(x, i)
+            altExp(y, i) <- do.call(aggregateAcrossCells, args)
+        }
+        altExps(y) <- altExps(y, withColData=FALSE)[use.altexps]
+    } else {
+        altExps(y) <- NULL # wiping out alternative experiments, as these were not aggregated.
     }
-    altExps(y) <- altExps(y, withColData=FALSE)[use.altexps]
 
     new.ids <- .process_ids(x, ids, subset.col)
     use.dimred <- .use_names_to_integer_indices(use.dimred, x=x, nameFUN=reducedDimNames, msg="use.dimred")
