@@ -67,9 +67,7 @@ Only used if \code{statistics=NULL}.}
 \item{suffix}{Logical scalar indicating whether to always suffix the assay name with the statistic type.}
 
 \item{subset.row}{An integer, logical or character vector specifying the features to use.
-If \code{NULL}, defaults to all features.
-For the \linkS4class{SingleCellExperiment} method, this argument will not affect alternative Experiments,
-where aggregation is always performed for all features (or not at all, depending on \code{use.altexps}).}
+If \code{NULL}, defaults to all features.}
 
 \item{subset.col}{An integer, logical or character vector specifying the cells to use.
 Defaults to all cells with non-\code{NA} entries of \code{ids}.}
@@ -85,8 +83,7 @@ Alternatively, a single function can be supplied, see below for more details.}
 
 \item{subset_row, subset_col, store_number, use_exprs_values, use_altexps, use_dimred, coldata_merge}{Soft deprecated equivalents to the arguments described above.}
 
-\item{use.altexps}{Logical scalar indicating whether aggregation should be performed for alternative experiments. 
-Alternatively, a character or integer vector specifying the alternative experiments to be aggregated.}
+\item{use.altexps}{Deprecated, use \code{\link{applySCE}} instead.}
 
 \item{use.dimred}{Logical scalar indicating whether aggregation should be performed for dimensionality reduction results.
 Alternatively, a character or integer vector specifying the dimensionality reduction results to be aggregated.}
@@ -99,8 +96,7 @@ A SummarizedExperiment of the same class of \code{x} is returned containing summ
 generated by \code{\link{summarizeAssayByGroup}} on all assays in \code{use.assay.type}.
 Column metadata are also aggregated according to the rules in \code{coldata.merge}, see below.
 
-For the SingleCellExperiment method, 
-the output also contains aggregated values for the reduced dimensions and alternative Experiments.
+For the SingleCellExperiment method, any alternative Experiments are removed when \code{use.altexps=NULL}.
 }
 \description{
 Sum counts or average expression values for each feature across groups of cells,
@@ -133,26 +129,13 @@ the names of all aggregated matrices are suffixed with their type of aggregate s
 
 If \code{ids} is a \linkS4class{DataFrame}, the combination of levels corresponding to each column is also reported in the column metadata.
 Otherwise, the level corresponding to each column is reported in the \code{ids} column metadata field as well as in the column names.
-}
-\section{Dealing with SingleCellExperiments}{
 
-If \code{x} is a \linkS4class{SingleCellExperiment}, aggregation is repeated for each entry of \code{\link{altExps}}.
-This is done by calling \code{aggregateAcrossCells} on that entry with the same arguments used for the main Experiment -
-as such, any column metadata in those entries will also be aggregated following the rules in \code{coldata.merge}.
-The exception is \code{subset.row}, which is not applied to the alternative Experiments as the feature sets are different.
-
-If \code{x} is a \linkS4class{SingleCellExperiment}, each entry of \code{\link{reducedDims}} is averaged across cells.
+If \code{x} is a \linkS4class{SingleCellExperiment}, entries of \code{\link{reducedDims}} specified by \code{use.dimred} are averaged across cells.
 This assumes that the average of low-dimensional coordinates has some meaning for a group of cells but the sum does not.
 We can explicitly specify computation of the \code{"mean"} or \code{"median"} (or both) with \code{dimred.stats}.
 If \code{dimred.stats} is of length greater than 1 or \code{suffix=TRUE},
 the name of each matrix in the output \code{\link{reducedDims}} is suffixed with the type of average.
-
-Users can tune the behavior of the function for these additional fields with \code{use.altexps} and \code{use.dimred}.
-Note that if the alternative experiments themselves are \linkS4class{SingleCellExperiment}s,
-any further nested alternative experiment or reduced dimensions will always be aggregated
-regardless of the value of \code{use.altexps} or \code{use.dimred}.
 }
-
 \examples{
 example_sce <- mockSCE()
 ids <- sample(LETTERS[1:5], ncol(example_sce), replace=TRUE)
@@ -168,7 +151,10 @@ out2
 example_sce$stuff <- runif(ncol(example_sce))
 out3 <- aggregateAcrossCells(example_sce, ids, 
      coldata_merge=list(stuff=sum))
-out3
+
+# Aggregating across the alternative Experiments as well.
+out4 <- applySCE(example_sce, aggregateAcrossCells, ids=ids)
+assay(altExp(out4))[1:10,]
 }
 \seealso{
 \code{\link{summarizeAssayByGroup}}, which does the heavy lifting at the assay level.
